# configure.in for cbgp
#
#
AC_INIT(src/main.c)
PACKAGE=cbgp
VERSION="1.0.2"
AC_PREFIX_DEFAULT(/usr)

#
# Version setting up for Automake
#
AM_INIT_AUTOMAKE(cbgp, $VERSION, no-define)
AM_CONFIG_HEADER(src/config.h)

AM_PROG_LIBTOOL
#LIBTOOL="$LIBTOOL --preserve-dup-deps"
#AC_SUBST(LIBTOOL)

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CHECK_LIB(readline, readline)
AC_CHECK_HEADERS(readline/readline.h)

AC_CHECK_LIB(gds, list_create, gds_ok=yes, gds_ok=no)
if test "x$gds_ok" != "xyes"; then
	AC_MSG_ERROR([libgds is needed to compile cbgp])
fi
AC_CHECK_HEADERS(libgds/fifo.h, gds_header_ok=yes, gds_header_ok=no)
if test "x$gds_ok" != "xyes"; then
	AC_MSG_ERROR([libgds headers are needed to compile cbgp])
fi

AC_PROG_INSTALL
AC_OUTPUT(Makefile src/Makefile src/bgp/Makefile src/cli/Makefile src/liballoc/Makefile src/net/Makefile src/sim/Makefile src/ui/Makefile)
